Remove redundant rules after applying suggestions.